--- a/Front_end/src/components/Navbar/Navbar.css
+++ b/Front_end/src/components/Navbar/Navbar.css
@@ -1,10 +1,17 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .navbar{
-    width: 100%;
+    width: 100%;    
     display: flex;
     align-items: center;
+    /* flex-direction: row; */
     justify-content: space-between;
     background: #fff;
-    padding:15px 7%;
+    padding: 15px 0;
     transition: 0.5s;
 }
 
@@ -14,22 +21,36 @@
 }
 
 ul{
-    flex:1;
+    /* flex:1; */
     list-style: none;
     text-align: center;
 }
 
 ul li{
     display: inline-block;
-    margin: 10px 20px;
+    padding: 0 10px;
     font-size: 18px;
     cursor: pointer;
+    button {
+        width: 70px;
+        background-color: #080808;
+        border: 1px solid #fff;
+        color: #fff;
+        height: 50px;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+    button:hover {
+        background-color: rgba(0,0,0,0.3);
+        transition: 0.5s;
+        transform: scale(1.15);
+    }
 }
 
 .toggle-icon{
     width: 50px;
     cursor: pointer;
-    margin-left: 40px;
+    /* margin-left: 20px; */
 }
 
 .search-box{
@@ -47,7 +68,7 @@ ul li{
     outline: 0;
     color: #fff;
     font-size: 18px;
-    max-width: 200px;
+    width: 200px;
 }
 
 .search-box input::placeholder{
@@ -74,4 +95,10 @@ ul li{
 
 .dark .search-box input::placeholder {
     color: #222;
+}
+
+.right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
