--- a/Front_end/src/components/Task/Task.css
+++ b/Front_end/src/components/Task/Task.css
@@ -1,6 +1,7 @@
 .tasking {
     display: flex;
     align-items: center;
-    width: 345px;
-    justify-content: space-between;
+    width: 50%;
+    justify-content: center;
+    border-right: 2px solid #000;
 }
