--- a/Front_end/src/components/Login/Login.css
+++ b/Front_end/src/components/Login/Login.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('./assets/img.jpg') no-repeat center center; /* Combined background-position */
+    background: #333;
     background-size: cover;
   }
   
