--- a/Front_end/src/components/Mini_profile/Mini_profile.css
+++ b/Front_end/src/components/Mini_profile/Mini_profile.css
@@ -12,6 +12,10 @@
         flex-direction: row;
         gap: 30px;
         padding: 20px 30px;
+        border-radius: 50px;
+        .personal-img img {
+            border-radius: 50px;
+        }
         .contact {
             display: flex;
             flex-direction: column;
@@ -29,12 +33,22 @@
                 }
             }
             .showProfile button {
-                width: 200px;
+                width: 250px;
                 height: 50px;
                 font-family: 'Poppins', sans-serif;
-                font-weight: 400;
+                font-weight: 500;
                 font-size: 23px;
                 line-height: 23px;
+                border-radius: 20px;
+            }
+            .showProfile button:hover {
+                cursor: pointer;
+                transform: scale(1.15);
+                transition: 0.5s;
+            }
+            .showProfile button:not(:hover) {
+                transform: scale(1);
+                transition: 0.5s;
             }
         }
     }
