--- a/Front_end/src/components/Navbar/Navbar.css
+++ b/Front_end/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     /* flex-direction: row; */
     justify-content: space-between;
     background: #fff;
-    padding: 15px 0;
+    padding: 15px 30px;
     transition: 0.5s;
 }
 
@@ -41,9 +41,14 @@ ul li{
         cursor: pointer;
     }
     button:hover {
-        background-color: rgba(0,0,0,0.3);
+        background-color: rgba(0,0,0,0.5);
         transition: 0.5s;
         transform: scale(1.15);
+    }
+    button:not(:hover) {
+        transform: scale(1);
+        transition: 0.5s;
+        background-color: #080808;
     }
 }
 
@@ -101,4 +106,12 @@ ul li{
     display: flex;
     align-items: center;
     justify-content: center;
+    img:hover {
+        transform: scale(1.15);
+        transition: 0.5s;
+    }
+    img:not(:hover) {
+        transform: scale(1);
+        transition: 0.5s;
+    }
 }
