--- a/Front_end/src/components/Login/Login.css
+++ b/Front_end/src/components/Login/Login.css
@@ -6,12 +6,12 @@
   }
   
   body {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #333;
-    background-size: cover;
+    background-size: cover; */
   }
   
   
