--- a/Front_end/src/components/profile/Profile.css
+++ b/Front_end/src/components/profile/Profile.css
@@ -14,7 +14,7 @@
     padding: 0 30px;
     display: flex;
     flex-direction: row;
-    /* justify-content: space-evenly; */
+    justify-content: space-between;
     gap: 100px;
     align-items: center;
     border: 1px solid rgba(0,0,0,0.1);
