--- a/Front_end/src/components/ranking/Ranking.css
+++ b/Front_end/src/components/ranking/Ranking.css
@@ -1,5 +1,13 @@
 .ranking {
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.rank {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
