--- a/Front_end/src/components/Task/Task.css
+++ b/Front_end/src/components/Task/Task.css
@@ -48,7 +48,7 @@ input[type="text"]{
 ol{
     padding: 0;
 }
-li{
+.seperate_button{
     font-size: 2rem;
     font-weight: bold;
     padding: 15px;
