--- a/Front_end/src/components/ranking/Ranking.css
+++ b/Front_end/src/components/ranking/Ranking.css
@@ -53,6 +53,7 @@
 }
 
 .leaderboard {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,9 +64,21 @@
         align-items: center;
         flex-direction: row;
         justify-content: space-evenly;
-        gap: 30px;
-        .div-Component {
-            margin: 0 80px;
+        .div-comp {
+            padding: 0 100px;
         }
+    }
+    .leader {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: row;
+    }
+    .avt-and-name {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 0 10px;
     }
 }
