--- a/Front_end/src/components/Login/Login.css
+++ b/Front_end/src/components/Login/Login.css
@@ -1,89 +1,78 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #333;
-    background-size: cover;
-  }
-  
-  .wrapper {
-    width: 420px;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    color: #fff;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.wrapper {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form {
+  border: 2px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.login-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 32px;
+  padding: 30px 100px;
+}
+
+.input-box {
+  padding: 15px 100px;
+  input {
+    background-color: #1d2634;
+    border: 1px solid #fff;
+    padding: 10px 30px;
     border-radius: 10px;
-    padding: 30px 40px;
   }
-  
-  .wrapper h1 {
-    font-size: 36px;
-    text-align: center;
-  }
-  
-  .wrapper .input-box {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 30px 0;
-  }
-  
-  .input-box input {
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2) ;
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
-  }
-  
-  .input-box input::placeholder{
-    color: #fff;
-  }
-  
-  .input-box i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-  }
-  
-  .wrapper .remember-forgot {
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-  }
-  
-  .remember-forgot label input {
-    accent-color: #fff;
-    margin-right: 3px;
-  }
-  
-  .remember-forgot a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .remember-forgot a:hover{
-    text-decoration: underline;
-  }
-  
-  .wrapper .btn {
-    width: 100%;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, .2) ;
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder{
+  color: #fff;
+}
+
+.input-box i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+}
+
+.submit-btn {
+  padding: 30px 0;
+  .btn {
+    padding: 0 110px;
     height: 45px;
     background: #fff;
     border: none;
@@ -95,19 +84,4 @@
     color: #333;
     font-weight: 600;
   }
-  
-  .wrapper .register-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-  }
-  
-  .register-link p a{
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  
-  .register-link p a:hover {
-    text-decoration: underline;
-  }
+}
