--- a/Front_end/src/components/pr0ject/Project.css
+++ b/Front_end/src/components/pr0ject/Project.css
@@ -1,3 +1,4 @@
+
 .project {
     width: 100%;
     margin: 0;
@@ -58,5 +59,13 @@
     font-weight: 500;
     font-size: 23px;
     line-height: 32px;
-    
+    color: black;
+    box-shadow: tomato;
+}
+
+.create:hover {
+    letter-spacing: 2px;
+    background-color: aqua;
+    color: black;
+    transform: scale(1.1);
 }
