--- a/Front_end/src/App.css
+++ b/Front_end/src/App.css
@@ -7,22 +7,6 @@ body {
     width: 100%;
   }
   
-  .icon {
-    vertical-align: middle;
-    line-height: 1px;
-    font-size: 20px;
-    padding: 0 10px;
-  }
-  .icon_header {
-    vertical-align: middle;
-    line-height: 1px;
-    font-size: 26px;
-  }
-  .icon {
-    margin-right: 5px;
-    cursor: pointer;
-  }
-  
   .grid-container {
     display: grid;
     grid-template-columns: 260px 1fr;
@@ -42,10 +26,6 @@ body {
     justify-content: end;
     padding: 0 30px;
     box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.5);
-  }
-  
-  .menu-icon {
-    display: none;
   }
   /* End Header  */
   
@@ -87,14 +67,20 @@ body {
     font-size: 18px;
   }
   
-  .sidebar-list-item:hover {
+  /* .sidebar-list-item:hover {
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
-  }
+  } */
   
   .sidebar-list-item > a {
     text-decoration: none;
     color: #9e9ea4;
+  }
+
+  .component-icon-list {
+    display: flex;
+    align-items: center;
+    gap: 10px;
   }
   /* End Sidebar  */
   
