--- a/Front_end/src/components/Task/Task.css
+++ b/Front_end/src/components/Task/Task.css
@@ -1,11 +1,12 @@
 .todo {
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
 }
 
