--- a/Front_end/src/App.css
+++ b/Front_end/src/App.css
@@ -10,7 +10,7 @@ body {
   .grid-container {
     display: grid;
     grid-template-columns: 260px 1fr;
-    /* grid-template-rows: 0.1fr 3fr; */
+    grid-template-rows: 1fr 3fr;
     grid-template-areas:
       'sidebar header header header'
       'sidebar main main main';
