--- a/Front_end/src/components/sidebar/Sidebar.css
+++ b/Front_end/src/components/sidebar/Sidebar.css
@@ -14,7 +14,7 @@
 .sidebar-list-item a {
     width: 100%;
     padding: 10px;
-    color: aqua;
+    color: white;
     cursor: pointer;
     text-decoration: none;
 }
