--- a/Front_end/src/components/profile/Profile.css
+++ b/Front_end/src/components/profile/Profile.css
@@ -11,10 +11,10 @@
 
 .profile {
     width: 100%;
-    padding: 0 30px;
+    padding: 20px 30px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 100px;
     align-items: center;
     border: 1px solid rgba(0,0,0,0.1);
