--- a/Front_end/src/components/ranking/Ranking.css
+++ b/Front_end/src/components/ranking/Ranking.css
@@ -99,6 +99,11 @@
     .role {
         width: 200px;
         height: 50px;
+        p {
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 36px;
+        }
     }
     .score {
         width: 200px;
@@ -125,4 +130,8 @@
     width: 100%;
 }
 
-
+.profile-name p {
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 36px;
+}
