--- a/Front_end/src/components/pr0ject/Modal/Task-modal.css
+++ b/Front_end/src/components/pr0ject/Modal/Task-modal.css
@@ -49,7 +49,7 @@ body.active-modal {
     display: flex;
     align-items: center;
     gap: 30px;
-    
+    /* border-radius: 200px; */
 }
 
 .task-project-component {
