--- a/Front_end/src/components/pr0ject/Project.css
+++ b/Front_end/src/components/pr0ject/Project.css
@@ -42,7 +42,7 @@
     padding: 10px 20px;
     margin: 0 10px;
     border: none;
-    border-radius: 20px;
+    border-radius: 10px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 23px;
@@ -52,6 +52,6 @@
     align-items: center;
     justify-content: center;
 }
-.move-btn {
+/* .btn3 {
     background-color: lightblue;
-}
+} */
