--- a/Front_end/src/components/ranking/Modal/Modal-rank.css
+++ b/Front_end/src/components/ranking/Modal/Modal-rank.css
@@ -2,7 +2,7 @@ body.active-modal {
     overflow-y: hidden;
 }
 
-.btn-modal {
+.btn-click {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,13 +10,13 @@ body.active-modal {
     display: block;
     font-size: 18px;
     border: 2px solid black;
-    border-radius: 10%;
+    border-radius: 6px;
     cursor: pointer;
+    height: 20%;
 }
 
-
-
-.btn-modal:hover {
+.btn-click:hover {
+    border-radius: 6px;
     background-color: black;
     color: white;
     transform: scale(1.2);
