--- a/Front_end/src/components/head/Header.css
+++ b/Front_end/src/components/head/Header.css
@@ -17,7 +17,8 @@
 
 .logout:hover {
     background-color: red;
-    /* Keep the hover effect as before */
+    /* Keep the hover effect as before ... */
+
 }
 
 .logout:hover a{
