--- a/Front_end/src/components/Task/Task.css
+++ b/Front_end/src/components/Task/Task.css
@@ -53,6 +53,9 @@
 .btn3 button:hover {
     background-color: aqua;
     color: #000;
+    animation-delay: 1ms;
+    transition: 0.5s;
+    transform: scale(1.1);
 }
 
 .btn2 button {
@@ -71,7 +74,11 @@
 .btn2 button:hover {
     background-color: red;
     color: #000;
+    animation-delay: 1ms;
+    transition: 0.5s;
+    transform: scale(1.1);
 }
+
 .comment-btn {
     background-color: tomato;
     display: flex;
@@ -162,6 +169,8 @@
     border-radius: 6px;
     background-color: lightgreen;
     transform: scale(1.2);
+    transition: 0.5s;
+    animation-delay: 1ms;
 }
 
 .upload{
