--- a/Front_end/src/components/pr0ject/Modal/Checkdone-modal.css
+++ b/Front_end/src/components/pr0ject/Modal/Checkdone-modal.css
@@ -7,17 +7,26 @@ body.active-modal {
 }
 
 .btn-modalcheck:hover {
-    background-color: black;
-    color: white;
-    transition: 0.8s;
-    transform: scale(1.1);
+    background-color: red;
+    color: black;
+    transition: 0.5s;
+    transform: scale(1.2);
     animation-delay: 1ms;
+    border: 1px solid black;
+    /* margin-right: 100px; */
+    border-radius: 4px;
+    padding: 2px 10px;
+    margin-left: 10px;
 }
 
 .btn-modalcheck:not(:hover) {
-    transition: 0.8s;
+    transition: 0.5s;
     transform: scale(1);
     animation-delay: 1ms;
+    border-radius: 4px;
+    border: 1px solid black;
+    padding: 2px 10px;
+    margin-left: 10px;
 }
 
 .modalcheck, .overlay {
@@ -58,12 +67,21 @@ body.active-modal {
     padding: 10px 0;
 }
 
-.content-task-project, .content-plus-points {
+.content-task-project{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 10px 0;
+}
+
+.content-plus-points {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 0;
+    color:red;
 }
 
 .plus {
@@ -76,6 +94,7 @@ body.active-modal {
     input {
         width: 100px;
     }
+    color: black;
 }
 
 .btn-check {
@@ -110,7 +129,7 @@ body.active-modal {
     margin-top: 30%;
 }
 
-.create-project1:hover {
+/* .create-project1:hover {
     border: 2px solid black;
     transition: 0.5s;
     background-color: aqua;
@@ -121,7 +140,7 @@ body.active-modal {
 .create-project1:not(:hover) {
     transition: 0.5s;
 
-}
+} */
 
 
 
