--- a/Front_end/src/components/pr0ject/Modal/Modal.css
+++ b/Front_end/src/components/pr0ject/Modal/Modal.css
@@ -19,6 +19,7 @@ body.active-modal {
     border-radius: 6px;
     color: white;
     transform: scale(1.2);
+    transition: 0.5s;
     animation-delay: 1ms;
 }
 
@@ -100,6 +101,8 @@ body.active-modal {
 .close-modal:hover {
     background-color: red;
     transform: scale(1.2) ;
+    transition: 0.5s;
+    animation-delay: 0.5ms;
 
 }
 
@@ -134,14 +137,16 @@ body.active-modal {
     border: 2px solid aqua;    
     border-radius: 15px;
     padding: 5px 10px;
-    margin-top: 30%;
+    /* margin-bottom: 20px; */
+    /* margin-top: 30%; */
 }
 
 .create-project1:hover {
     border: 2px solid white;
-    background-color: aqua;
+    background-color: lightblue;
     color: black;
     letter-spacing: 3%;
     transform: scale(1.2);
+    transition: 0.5s;
 }
 
