--- a/Front_end/src/components/profile/Profile.css
+++ b/Front_end/src/components/profile/Profile.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* gap: 50px; */
     align-items: center;
     border: 1px solid rgba(0,0,0,0.1);
     background: rgba(0,0,0,0.3);
@@ -33,30 +32,13 @@
 .details {
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    /* padding: 0 10px; */
 }
 
 .progress-bar {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     gap: 20px;
-}
-
-.stats {
-    width: 100%;
-    text-align: left;
-    display: flex;
-    align-items: center;
-    ul {
-        list-style: none;
-        li {
-            padding: 10px 0;
-        }
-    }
-}
-
-.job{
-    font-weight: 700;
-    color: rgb(12, 238, 238);
+    padding: 10px 0;
 }
