--- a/Front_end/src/components/ranking/Ranking.css
+++ b/Front_end/src/components/ranking/Ranking.css
@@ -116,11 +116,11 @@
 }
 
 .subTitle {
-    color: aqua;
+    color: lightgreen;
 }
 
 .dashboard {
-    color: aqua;
+    color: lightgreen;
 }
 
 .leader {
