--- a/Front_end/src/components/sidebar/Sidebar.css
+++ b/Front_end/src/components/sidebar/Sidebar.css
@@ -4,6 +4,16 @@
     margin: 0;
 }
 
+.sidebar-brand {
+    width: 180px;
+    height: 150px;
+    img {
+        width: 100%;
+        height: 100%;
+    
+    }
+}
+
 .sidebar-list-item:hover {
     cursor: pointer;
     background-color: rgba(72, 10, 243, 0.3);
@@ -14,7 +24,7 @@
 
 .sidebar-list-item a {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     color: white;
     cursor: pointer;
     text-decoration: none;
