--- a/Front_end/src/components/sidebar/Sidebar.css
+++ b/Front_end/src/components/sidebar/Sidebar.css
@@ -15,13 +15,15 @@
 }
 
 .sidebar-list-item:hover, .notify:hover {
+    border: none;
     cursor: pointer;
     background-color: darkgray;
     transition: 0.5s;
-    animation-delay: 1ms;
+    /* animation-delay: 1ms; */
 }
 
 .sidebar-list-item a, .notify a {
+    border: none;
     width: 100%;
     padding: 1px;
     color: white;
